src/tests/functionality/assignment_5_functions_headers/valid/04_mandatory_void_function_return_nothing.c
int global_value = 0;

void set_global(int value) {
    global_value = value;
    return;
}

int main() {
    set_global(9);
    return global_value;
}
