src/tests/functionality/assignment_5_functions_headers/invalid_semantic/03_mandatory_non_void_return_without_value.c
int f() {
    return;
}

int main() {
    return 0;
}
